--- a/e-ticaret/src/main/resources/application.properties
+++ b/e-ticaret/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/balimMarket
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=Furkan.55
 spring.jpa.properties.javax.persistence.validation.mode = none
