--- a/e-ticaret/pom.xml
+++ b/e-ticaret/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bal.m</groupId>
+	<groupId>com.balim</groupId>
 	<artifactId>e-ticaret</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>e-ticaret</name>
@@ -50,6 +50,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 	</dependencies>
 
